# CoD4-MW_AimOptimizer

./: AimOptimizer.cpp  CMakeLists.txt  README.md
configs/: AimConfig.h  CaptureScreen.h  FindBestTarget.h  FindEnemies.h  InitDirectX.h  MoveMouse.h  ProcessInput.h
tools/: AimConfig.cpp  CaptureScreen.cpp  FindBestTarget.cpp  FindEnemies.cpp  InitDirectX.cpp  MoveMouse.cpp  ProcessInput.cpp
